<resources>
    <string name="app_name">RetroWallpaper</string>
    <string name="wallpaper">wallpaper</string>
    <string name="butt1">Set Wallpaper</string>
    <string name="navTitle">Retro Wallpaper</string>
    <string name="imglib">Image Library</string>
    <string name="edit">Edit Wallpaper</string>
    <string name="other">More</string>
    <string name="preview">Preview</string>
    <string name="bkg">Background</string>
    <string name="foreground">Objects</string>
    <string name="upgrade">Upgrade</string>
    <string name="upgradeTitle">UPGRADE</string>
    <string name="upgradeDesc">Upgrade to get better stuff.</string>
    <string name="upgradeButton">UPGRADE</string>
    <string name="abt">About</string>
    <string name="abtTitle">About</string>
    <string name="abtDesc">Authors:\nAustin Purtell\nMichael Walling\nSamuel Ferguson</string>
    <string name="objName">Object 1</string>
    <string name="objSize">Large</string>
    <string name="objVelocity">Fast</string>
    <string name="objAngle">45°</string>
    <string name="objDesc4">Idk</string>
    <string name="action_home">Home</string>
    <string name="clear">Clear Objects</string>
</resources>
